@@ -56,11 +56,11 @@ class Event(Enum):
     FILE_CHANGED = "FILE_CHANGED"
     FILE_INFO = "FILE_INFO"
     JOB_INFO = "JOB_INFO"
-    DOWNLOAD_INFO = "DOWNLOAD_INFO"
+    TRANSFER_INFO = "TRANSFER_INFO"
 
-    DOWNLOAD_ABORTED = "DOWNLOAD_ABORTED"
-    DOWNLOAD_STOPPED = "DOWNLOAD_STOPPED"
-    DOWNLOAD_FINISHED = "DOWNLOAD_FINISHED"
+    TRANSFER_ABORTED = "TRANSFER_ABORTED"
+    TRANSFER_STOPPED = "TRANSFER_STOPPED"
+    TRANSFER_FINISHED = "TRANSFER_FINISHED"
 
 
 class Source(Enum):
@@ -94,9 +94,9 @@ class Command(Enum):
 
     RESET_PRINTER = "RESET_PRINTER"
 
-    START_DOWNLOAD = "START_DOWNLOAD"
-    SEND_DOWNLOAD_INFO = "SEND_DOWNLOAD_INFO"
-    STOP_DOWNLOAD = "STOP_DOWNLOAD"
+    START_TRANSFER = "START_TRANSFER"
+    SEND_TRANSFER_INFO = "SEND_TRANSFER_INFO"
+    STOP_TRANSFER = "STOP_TRANSFER"
 
     SET_PRINTER_PREPARED = "SET_PRINTER_PREPARED"
 
